--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,13 +1,343 @@
-<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-             xmlns:tools="http://schemas.android.com/tools"
-             android:layout_width="match_parent"
-             android:layout_height="match_parent"
-             tools:context="com.testography.am_mvp.ui.fragments.AccountFragment">
+<android.support.design.widget.CoordinatorLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:id="@+id/coordinator_account"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    tools:context="com.testography.am_mvp.ui.fragments.AccountFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
+    <android.support.design.widget.AppBarLayout
+        android:id="@+id/appbar_account"
+        android:layout_marginTop="@dimen/appbar_account_margin_top"
+        android:fitsSystemWindows="true"
+        android:theme="@style/AppTheme.AppBarOverlay"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:text="@string/account_fragment"/>
+        android:layout_height="wrap_content">
 
-</FrameLayout>
+        <android.support.design.widget.CollapsingToolbarLayout
+            android:fitsSystemWindows="true"
+            android:theme="@style/AppTheme.PopupOverlay"
+            app:contentScrim="@color/colorPrimary"
+            app:expandedTitleGravity="bottom|center_horizontal"
+            app:layout_scrollFlags="scroll|exitUntilCollapsed"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <ImageView
+                android:id="@+id/iv_account_header"
+                android:layout_width="match_parent"
+                android:layout_height="172dp"
+                android:scaleType="centerCrop"
+                android:src="@drawable/account_header_bg"
+                app:layout_collapseMode="parallax"/>
+
+            <TextView
+                android:id="@+id/tv_account_title"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="center_horizontal"
+                android:padding="46dp"
+                android:text="Test Name"
+                android:textColor="@android:color/white"
+                android:textSize="20sp"
+                android:textStyle="bold"
+                app:layout_collapseMode="parallax"/>
+
+        </android.support.design.widget.CollapsingToolbarLayout>
+
+    </android.support.design.widget.AppBarLayout>
+
+    <android.support.v4.widget.NestedScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_anchor="@id/appbar_account"
+        app:layout_behavior="@string/appbar_scrolling_view_behavior">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="24dp"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginTop="80dp"
+                android:orientation="horizontal">
+
+                <ImageView
+                    android:layout_width="16dp"
+                    android:layout_height="16dp"
+                    android:layout_marginEnd="16dp"
+                    android:layout_marginRight="16dp"
+                    android:layout_marginTop="8dp"
+                    android:src="@drawable/ic_call_black_24dp"
+                    android:tint="@color/colorAccent"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:orientation="vertical">
+
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginBottom="4dp"
+                        android:text="@string/phone_label"
+                        android:textColor="@color/color_grey_darker"
+                        android:textSize="12sp"/>
+
+                    <TextView
+                        android:id="@+id/tv_account_phone"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:textSize="@dimen/size_small_16"
+                        android:text="@string/phone"
+                        tools:text="@string/phone"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="1dp"
+                android:layout_marginBottom="20dp"
+                android:background="@color/grey_light"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginEnd="16dp"
+                android:layout_marginStart="16dp"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="match_parent"
+                    android:layout_marginBottom="24dp"
+                    android:text="@string/delivery_address"
+                    android:textSize="14sp"
+                    android:textStyle="bold"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_medial_24"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/size_small_16"
+                        android:layout_height="@dimen/size_small_16"
+                        android:layout_marginEnd="@dimen/spacing_normal_16"
+                        android:layout_marginRight="@dimen/spacing_normal_16"
+                        android:layout_marginTop="@dimen/spacing_small_8"
+                        android:src="@drawable/ic_place_black_24dp"
+                        android:tint="@color/colorAccent"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_account_address_title1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="4dp"
+                            android:text="@string/label_building"
+                            android:textColor="@color/color_grey_darker"
+                            android:textSize="@dimen/font_small_12"/>
+
+                        <TextView
+                            android:id="@+id/account_address1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/spacing_medial_24"
+                            android:textSize="@dimen/size_small_16"
+                            android:text="@string/address"
+                            tools:text="@string/address"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/spacing_tiny_4"
+                            android:text="@string/label_comments"
+                            android:textColor="@color/color_grey_darker"
+                            android:textSize="@dimen/font_small_12"/>
+
+                        <TextView
+                            android:id="@+id/account_address_comment1"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/size_small_16"
+                            android:text="@string/comments"
+                            tools:text="@string/comments"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/line_size_1"
+                            android:layout_marginBottom="@dimen/spacing_zero"
+                            android:layout_marginTop="@dimen/spacing_small_8"
+                            android:background="@color/grey_light"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_medial_24"
+                    android:orientation="horizontal">
+
+                    <ImageView
+                        android:layout_width="@dimen/size_small_16"
+                        android:layout_height="@dimen/size_small_16"
+                        android:layout_marginEnd="@dimen/spacing_normal_16"
+                        android:layout_marginRight="@dimen/spacing_normal_16"
+                        android:layout_marginTop="@dimen/spacing_small_8"
+                        android:src="@drawable/ic_place_black_24dp"
+                        android:tint="@color/colorAccent"/>
+
+                    <LinearLayout
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical">
+
+                        <TextView
+                            android:id="@+id/tv_account_address_title2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/spacing_tiny_4"
+                            android:text="@string/label_work_address"
+                            android:textColor="@color/color_grey_darker"
+                            android:textSize="@dimen/font_small_12"/>
+
+                        <TextView
+                            android:id="@+id/account_address2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/spacing_medial_24"
+                            android:textSize="@dimen/size_small_16"
+                            android:text="@string/address"
+                            tools:text="@string/address"/>
+
+                        <TextView
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="@dimen/spacing_tiny_4"
+                            android:text="@string/work_comments_label"
+                            android:textColor="@color/color_grey_darker"
+                            android:textSize="@dimen/font_small_12"/>
+
+                        <TextView
+                            android:id="@+id/account_address_comment2"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:textSize="@dimen/size_small_16"
+                            android:text="@string/work_comments"
+                            tools:text="@string/work_comments"/>
+
+                        <View
+                            android:layout_width="match_parent"
+                            android:layout_height="@dimen/line_size_1"
+                            android:layout_marginTop="@dimen/spacing_small_8"
+                            android:background="@color/grey_light"/>
+
+                    </LinearLayout>
+
+                </LinearLayout>
+
+                <Button
+                    android:id="@+id/btn_add_address"
+                    style="@style/CustomButton"
+                    android:theme="@style/StartBtn"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_normal_20"
+                    android:text="@string/add_address"
+                    android:textColor="@color/color_white"
+                    android:textSize="@dimen/font_small_12"
+                    android:textStyle="bold"/>
+
+            </LinearLayout>
+
+            <View
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/line_size_1"
+                android:layout_marginBottom="@dimen/spacing_normal_20"
+                android:background="@color/grey_light"/>
+
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="@dimen/spacing_medial_24"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:orientation="vertical">
+
+                <TextView
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_medial_24"
+                    android:text="@string/push_notifications"
+                    android:textSize="@dimen/font_normal_18"
+                    android:textStyle="bold"/>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content"
+                    android:layout_marginBottom="@dimen/spacing_medial_24">
+
+                    <TextView
+                        android:layout_width="@dimen/spacing_zero"
+                        android:textSize="@dimen/size_small_16"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/order_status_notification"/>
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/sw_order_status"
+                        android:textSize="@dimen/size_small_16"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/spacing_normal_16"
+                        android:layout_marginStart="@dimen/spacing_normal_16"
+                        android:theme="@style/PushSwitch"/>
+
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content">
+
+                    <TextView
+                        android:layout_width="@dimen/spacing_zero"
+                        android:layout_height="wrap_content"
+                        android:layout_gravity="center_vertical"
+                        android:layout_weight="1"
+                        android:text="@string/special_offer_notification"/>
+
+                    <android.support.v7.widget.SwitchCompat
+                        android:id="@+id/sw_special_offer"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_marginEnd="@dimen/spacing_normal_16"
+                        android:layout_marginStart="@dimen/spacing_normal_16"
+                        android:checked="true"
+                        android:theme="@style/PushSwitch"/>
+
+                </LinearLayout>
+
+            </LinearLayout>
+
+        </LinearLayout>
+
+    </android.support.v4.widget.NestedScrollView>
+
+</android.support.design.widget.CoordinatorLayout>
