--- a/app/src/main/res/values-v21/dimens.xml
+++ b/app/src/main/res/values-v21/dimens.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
     <dimen name="avatar_padding_top">40dp</dimen>
+    <dimen name="appbar_account_margin_top">-24dp</dimen>
 </resources>
