--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,4 +7,9 @@
     <color name="social_btn_background">#80000000</color>
     <color name="grey">#5D5D5D</color>
     <color name="grey_light">#EDEFF3</color>
+
+    <color name="color_warning">#EF5350</color>
+    <color name="color_black">@android:color/black</color>
+    <color name="color_white">@android:color/white</color>
+    <color name="color_grey_darker">@android:color/darker_gray</color>
 </resources>
