--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -41,6 +41,7 @@
     <dimen name="spacing_small_8">8dp</dimen>
     <dimen name="spacing_small_12">12dp</dimen>
     <dimen name="spacing_normal_16">16dp</dimen>
+    <dimen name="spacing_normal_20">20dp</dimen>
     <dimen name="spacing_medial_24">24dp</dimen>
     <dimen name="spacing_medial_28">28dp</dimen>
     <dimen name="spacing_medium_32">32dp</dimen>
@@ -64,7 +65,6 @@
     <dimen name="line_size_1">1dp</dimen>
     <dimen name="line_size_2">2dp</dimen>
 
-
     <dimen name="login_logo_width_70">70dp</dimen>
     <dimen name="login_logo_height_100">100dp</dimen>
     <dimen name="avatar_padding_top">16dp</dimen>
@@ -73,4 +73,8 @@
     <dimen name="count_button_padding">12dp</dimen>
     <dimen name="product_image_height">180dp</dimen>
     <dimen name="badge_text_size">12sp</dimen>
+    <dimen name="spacing_zero">0dp</dimen>
+    <dimen name="appbar_account_margin_top">0dp</dimen>
+    <dimen name="account_avatar_height">136dp</dimen>
+    <dimen name="account_avatar_width">136dp</dimen>
 </resources>
