--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -110,6 +110,17 @@
         <item name="android:layout_marginRight">@dimen/spacing_medium_32</item>
     </style>
 
+    <style name="CustomButtonAccount">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">@dimen/size_medium_56</item>
+        <item name="android:gravity">center</item>
+        <item name="android:textSize">@dimen/font_small_12</item>
+        <item name="android:fontFamily">@string/roboto_regular</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:layout_marginLeft">@dimen/spacing_zero</item>
+        <item name="android:layout_marginRight">@dimen/spacing_zero</item>
+    </style>
+
     <style name="StartBtn" parent="Base.Widget.AppCompat.Button">
         <item name="colorButtonNormal">@color/colorAccent</item>
         <item name="android:textColor">@android:color/white</item>
