--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -61,18 +61,18 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginBottom="24dp"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
-                android:layout_marginTop="80dp"
+                android:layout_marginBottom="@dimen/spacing_medial_24"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
+                android:layout_marginTop="@dimen/spacing_larger_80"
                 android:orientation="horizontal">
 
                 <ImageView
-                    android:layout_width="16dp"
-                    android:layout_height="16dp"
-                    android:layout_marginEnd="16dp"
-                    android:layout_marginRight="16dp"
-                    android:layout_marginTop="8dp"
+                    android:layout_width="@dimen/spacing_normal_16"
+                    android:layout_height="@dimen/spacing_normal_16"
+                    android:layout_marginEnd="@dimen/spacing_normal_16"
+                    android:layout_marginRight="@dimen/spacing_normal_16"
+                    android:layout_marginTop="@dimen/spacing_small_8"
                     android:src="@drawable/ic_call_black_24dp"
                     android:tint="@color/colorAccent"/>
 
@@ -84,10 +84,10 @@
                     <TextView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:layout_marginBottom="4dp"
+                        android:layout_marginBottom="@dimen/spacing_tiny_4"
                         android:text="@string/phone_label"
                         android:textColor="@color/color_grey_darker"
-                        android:textSize="12sp"/>
+                        android:textSize="@dimen/font_small_12"/>
 
                     <TextView
                         android:id="@+id/account_phone_tv"
@@ -103,23 +103,23 @@
 
             <View
                 android:layout_width="match_parent"
-                android:layout_height="1dp"
-                android:layout_marginBottom="20dp"
+                android:layout_height="@dimen/line_size_1"
+                android:layout_marginBottom="@dimen/spacing_normal_20"
                 android:background="@color/grey_light"/>
 
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginEnd="16dp"
-                android:layout_marginStart="16dp"
+                android:layout_marginEnd="@dimen/spacing_normal_16"
+                android:layout_marginStart="@dimen/spacing_normal_16"
                 android:orientation="vertical">
 
                 <TextView
                     android:layout_width="wrap_content"
                     android:layout_height="match_parent"
-                    android:layout_marginBottom="24dp"
+                    android:layout_marginBottom="@dimen/spacing_medial_24"
                     android:text="@string/delivery_address"
-                    android:textSize="14sp"
+                    android:textSize="@dimen/font_small_14"
                     android:textStyle="bold"/>
 
                 <LinearLayout
@@ -146,7 +146,7 @@
                             android:id="@+id/tv_account_address_title1"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:layout_marginBottom="4dp"
+                            android:layout_marginBottom="@dimen/spacing_tiny_4"
                             android:text="@string/label_building"
                             android:textColor="@color/color_grey_darker"
                             android:textSize="@dimen/font_small_12"/>
@@ -255,8 +255,6 @@
                     android:id="@+id/add_address_btn"
                     style="@style/CustomButtonAccount"
                     android:theme="@style/StartBtn"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
                     android:layout_marginBottom="@dimen/spacing_normal_20"
                     android:text="@string/add_address"
                     android:textColor="@color/color_white"
@@ -302,7 +300,6 @@
 
                     <android.support.v7.widget.SwitchCompat
                         android:id="@+id/sw_order_status"
-                        android:textSize="@dimen/size_small_16"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_marginEnd="@dimen/spacing_normal_16"
@@ -318,6 +315,7 @@
                     <TextView
                         android:layout_width="@dimen/spacing_zero"
                         android:layout_height="wrap_content"
+                        android:textSize="@dimen/size_small_16"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
                         android:text="@string/special_offer_notification"/>
