Start adding collapsible avatar

--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -337,4 +337,18 @@
 
     </android.support.v4.widget.NestedScrollView>
 
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:layout_width="@dimen/account_avatar_width"
+        android:layout_height="@dimen/account_avatar_height"
+        android:layout_gravity="center_horizontal"
+        android:src="@drawable/user_avatar_big"
+        app:border_color="@android:color/white"
+        app:border_width="2dp"
+        app:finalHeight="@dimen/image_final_width"
+        app:finalYPosition="2dp"
+        app:layout_behavior="com.testography.am_mvp.behaviors.AvatarImageBehavior"
+        app:startHeight="2dp"
+        app:startToolbarPosition="2dp"
+        app:startXPosition="2dp"/>
+
 </android.support.design.widget.CoordinatorLayout>
