--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -78,4 +78,6 @@
     <dimen name="account_avatar_height">136dp</dimen>
     <dimen name="account_avatar_width">136dp</dimen>
     <dimen name="pointer_size">18dp</dimen>
+
+    <dimen name="image_final_width">32dp</dimen>
 </resources>
