--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:id="@+id/coordinator_account"
+    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="com.testography.am_mvp.ui.fragments.AccountFragment">
@@ -336,19 +337,5 @@
         </LinearLayout>
 
     </android.support.v4.widget.NestedScrollView>
-
-    <de.hdodenhof.circleimageview.CircleImageView
-        android:layout_width="@dimen/account_avatar_width"
-        android:layout_height="@dimen/account_avatar_height"
-        android:layout_gravity="center_horizontal"
-        android:src="@drawable/user_avatar_big"
-        app:border_color="@android:color/white"
-        app:border_width="2dp"
-        app:finalHeight="@dimen/image_final_width"
-        app:finalYPosition="2dp"
-        app:layout_behavior="com.testography.am_mvp.behaviors.AvatarImageBehavior"
-        app:startHeight="2dp"
-        app:startToolbarPosition="2dp"
-        app:startXPosition="2dp"/>
 
 </android.support.design.widget.CoordinatorLayout>
