--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -28,7 +28,7 @@
             <ImageView
                 android:id="@+id/iv_account_header"
                 android:layout_width="match_parent"
-                android:layout_height="172dp"
+                android:layout_height="@dimen/account_toolbar_height"
                 android:scaleType="centerCrop"
                 android:src="@drawable/account_header_bg"
                 app:layout_collapseMode="parallax"/>
@@ -39,12 +39,18 @@
                 android:layout_height="wrap_content"
                 android:layout_gravity="center_horizontal"
                 android:padding="46dp"
-                android:text="Test Name"
+                android:text="Константин Константинов"
                 android:textColor="@android:color/white"
                 android:textSize="20sp"
                 android:textStyle="bold"
                 app:layout_collapseMode="parallax"/>
 
+            <ImageView
+                android:background="@drawable/user_avatar_big"
+                android:layout_gravity="center_horizontal"
+                android:layout_marginTop="143dp"
+                android:layout_width="@dimen/account_avatar_width"
+                android:layout_height="@dimen/account_avatar_height"/>
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -65,7 +71,7 @@
                 android:layout_marginBottom="@dimen/spacing_medial_24"
                 android:layout_marginEnd="@dimen/spacing_normal_16"
                 android:layout_marginStart="@dimen/spacing_normal_16"
-                android:layout_marginTop="@dimen/spacing_larger_80"
+                android:layout_marginTop="@dimen/spacing_medium_plus_36"
                 android:orientation="horizontal">
 
                 <ImageView
