--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -80,4 +80,8 @@
     <dimen name="pointer_size">18dp</dimen>
     <dimen name="account_toolbar_height">184dp</dimen>
 
+    <dimen name="image_width">120dp</dimen>
+    <dimen name="image_final_width">32dp</dimen>
+    <dimen name="spacing_normal">16dp</dimen>
+
 </resources>
