--- a/app/src/main/res/layout/badge_layout.xml
+++ b/app/src/main/res/layout/badge_layout.xml
@@ -10,6 +10,7 @@
     <ImageView
         android:layout_centerVertical="true"
         android:layout_marginLeft="@dimen/spacing_larger_96"
+        android:layout_marginTop="@dimen/spacing_small_8"
         android:src="@drawable/firebase_icon"
         android:layout_width="@dimen/spacing_medium_32"
         android:layout_height="@dimen/spacing_medium_32"/>
@@ -25,7 +26,7 @@
 
     <!-- Badge Count -->
     <TextView
-        android:id="@+id/items_in_cart"
+        android:id="@+id/items_in_cart_txt"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_alignParentRight="true"
