--- a/app/src/main/res/layout/fragment_account.xml
+++ b/app/src/main/res/layout/fragment_account.xml
@@ -1,29 +1,29 @@
 <android.support.design.widget.CoordinatorLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/coordinator_account"
-    android:background="@android:color/white"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:background="@android:color/white"
     tools:context="com.testography.am_mvp.ui.fragments.AccountFragment">
 
     <android.support.design.widget.AppBarLayout
         android:id="@+id/appbar_account"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
         android:layout_marginTop="@dimen/appbar_account_margin_top"
         android:fitsSystemWindows="true"
-        android:theme="@style/AppTheme.AppBarOverlay"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content">
+        android:theme="@style/AppTheme.AppBarOverlay">
 
         <android.support.design.widget.CollapsingToolbarLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
             android:fitsSystemWindows="true"
             android:theme="@style/AppTheme.PopupOverlay"
             app:contentScrim="@color/colorPrimary"
             app:expandedTitleGravity="bottom|center_horizontal"
-            app:layout_scrollFlags="scroll|exitUntilCollapsed"
-            android:layout_width="match_parent"
-            android:layout_height="match_parent">
+            app:layout_scrollFlags="scroll|exitUntilCollapsed">
 
             <ImageView
                 android:id="@+id/iv_account_header"
@@ -45,13 +45,6 @@
                 android:textStyle="bold"
                 app:layout_collapseMode="parallax"/>
 
-            <ImageView
-                android:background="@drawable/user_avatar_big"
-                android:layout_gravity="center_horizontal"
-                android:layout_marginTop="@dimen/avatar_margin_top"
-                android:layout_width="@dimen/account_avatar_width"
-                android:layout_height="@dimen/account_avatar_height"
-                android:id="@+id/imageView"/>
         </android.support.design.widget.CollapsingToolbarLayout>
 
     </android.support.design.widget.AppBarLayout>
@@ -101,8 +94,8 @@
                         android:id="@+id/account_phone_tv"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/size_small_16"
                         android:text="@string/phone"
+                        android:textSize="@dimen/size_small_16"
                         tools:text="@string/phone"/>
 
                 </LinearLayout>
@@ -164,8 +157,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/spacing_medial_24"
-                            android:textSize="@dimen/size_small_16"
                             android:text="@string/address"
+                            android:textSize="@dimen/size_small_16"
                             tools:text="@string/address"/>
 
                         <TextView
@@ -180,8 +173,8 @@
                             android:id="@+id/account_comments_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/size_small_16"
                             android:text="@string/comments"
+                            android:textSize="@dimen/size_small_16"
                             tools:text="@string/comments"/>
 
                         <View
@@ -229,8 +222,8 @@
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_marginBottom="@dimen/spacing_medial_24"
-                            android:textSize="@dimen/size_small_16"
                             android:text="@string/address"
+                            android:textSize="@dimen/size_small_16"
                             tools:text="@string/address"/>
 
                         <TextView
@@ -245,8 +238,8 @@
                             android:id="@+id/account_work_comments_tv"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:textSize="@dimen/size_small_16"
                             android:text="@string/work_comments"
+                            android:textSize="@dimen/size_small_16"
                             tools:text="@string/work_comments"/>
 
                         <View
@@ -262,12 +255,12 @@
                 <Button
                     android:id="@+id/add_address_btn"
                     style="@style/CustomButtonAccount"
-                    android:theme="@style/StartBtn"
                     android:layout_marginBottom="@dimen/spacing_normal_20"
                     android:text="@string/add_address"
                     android:textColor="@color/color_white"
                     android:textSize="@dimen/font_small_12"
-                    android:textStyle="bold"/>
+                    android:textStyle="bold"
+                    android:theme="@style/StartBtn"/>
 
             </LinearLayout>
 
@@ -300,11 +293,11 @@
 
                     <TextView
                         android:layout_width="@dimen/spacing_zero"
-                        android:textSize="@dimen/size_small_16"
                         android:layout_height="wrap_content"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:text="@string/order_status_notification"/>
+                        android:text="@string/order_status_notification"
+                        android:textSize="@dimen/size_small_16"/>
 
                     <android.support.v7.widget.SwitchCompat
                         android:id="@+id/sw_order_status"
@@ -323,10 +316,10 @@
                     <TextView
                         android:layout_width="@dimen/spacing_zero"
                         android:layout_height="wrap_content"
-                        android:textSize="@dimen/size_small_16"
                         android:layout_gravity="center_vertical"
                         android:layout_weight="1"
-                        android:text="@string/special_offer_notification"/>
+                        android:text="@string/special_offer_notification"
+                        android:textSize="@dimen/size_small_16"/>
 
                     <android.support.v7.widget.SwitchCompat
                         android:id="@+id/sw_special_offer"
@@ -345,18 +338,19 @@
 
     </android.support.v4.widget.NestedScrollView>
 
-    <!--<de.hdodenhof.circleimageview.CircleImageView-->
-    <!--android:layout_width="@dimen/image_width"-->
-    <!--android:layout_height="@dimen/image_width"-->
-    <!--android:layout_gravity="center_horizontal"-->
-    <!--android:src="@drawable/quila"-->
-    <!--app:border_color="@android:color/white"-->
-    <!--app:border_width="@dimen/line_size_2"-->
-    <!--app:finalHeight="@dimen/image_final_width"-->
-    <!--app:finalYPosition="@dimen/line_size_2"-->
-    <!--app:layout_behavior="com.testography.am_mvp.utils.AvatarImageBehavior"-->
-    <!--app:startHeight="@dimen/line_size_2"-->
-    <!--app:startToolbarPosition="@dimen/line_size_2"-->
-    <!--app:startXPosition="@dimen/line_size_2"/>-->
+    <de.hdodenhof.circleimageview.CircleImageView
+        android:id="@+id/avatar_big_iv"
+        android:src="@drawable/user_avatar"
+        android:layout_width="@dimen/account_avatar_width"
+        android:layout_height="@dimen/account_avatar_height"
+        android:layout_gravity="center_horizontal"
+        app:civ_border_color="@android:color/white"
+        app:civ_border_width="@dimen/line_size_1"
+        app:finalHeight="@dimen/avatar_big_final_width"
+        app:finalYPosition="@dimen/line_size_2"
+        app:layout_behavior=".utils.AvatarImageBehavior"
+        app:startHeight="@dimen/line_size_2"
+        app:startToolbarPosition="@dimen/line_size_2"
+        app:startXPosition="@dimen/line_size_2"/>
 
 </android.support.design.widget.CoordinatorLayout>
